# hotelwifi

./: logging_config.py  main.py  number.py  passwords.py  processor.py  pyproject.toml  results.py  session.py
tests/: test_number.py  test_passwords.py
