[tool.poetry]
name = "hotelwifi"
version = "0.1.0"
description = ""
authors = ["alexeygrachev <agrachev@cindicator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tqdm = "^4.64.1"
click = "^8.1.3"
get-mac = "^0.8.3"
more-itertools = "^9.0.0"
munch = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
